InternexDev_Sandbox/src/objects/QB_Credit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>ApplyTaxAfterDiscount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApplyTaxAfterDiscount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Email__c</fullName>
        <label>Bill Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <label>Billing ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_1__c</fullName>
        <label>Billing Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_2__c</fullName>
        <label>Billing Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Line_3__c</fullName>
        <label>Billing Line 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Crew__c</fullName>
        <label>Crew #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Memo__c</fullName>
        <label>Customer Memo</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ref__c</fullName>
        <label>Customer Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DetailType__c</fullName>
        <label>DetailType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailStatus__c</fullName>
        <label>EmailStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Value__c</fullName>
        <label>Item Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Amount__c</fullName>
        <label>Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_ID__c</fullName>
        <label>Line ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrintStatus__c</fullName>
        <label>PrintStatus</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_CreateTime__c</fullName>
        <label>QB CreateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QB_ID__c</fullName>
        <label>QB ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_LastUpdatedTime__c</fullName>
        <label>QB LastUpdatedTime</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemainingCredit__c</fullName>
        <label>RemainingCredit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shippin_CountrySubDivisionCode__c</fullName>
        <label>Shippin CountrySubDivisionCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Id__c</fullName>
        <label>Shipping Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Line_1__c</fullName>
        <label>Shipping Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_PostalCode__c</fullName>
        <label>Shipping PostalCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sparse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sparse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code_Ref__c</fullName>
        <label>Tax Code Ref</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmt__c</fullName>
        <label>TotalAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>QB Credit Memo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QB Credit Memo ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QB Credit Memos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>